spade-tests/src/snapshots/spade_tests__typeinference__concat_requires_number.snap
---
source: spade-tests/src/typeinference.rs
---
struct A {}

fn test(a: A) -> int<8> {
    a `concat` a
}


error: Argument type mismatch. Expected Number<#uint> got A
   ┌─ testinput:4:5
   │
 3 │ fn test(a: A) -> int<8> {
   │            - Type A inferred here
 4 │     a `concat` a
   │     ^ expected Number<#uint>
   │
   ┌─ <compiler dir>/stdlib/conv.spade:18:22
   │
18 │ pub extern fn concat<N, M, K>(x: N, y: M) -> K;
   │                      - Type Number<_> inferred here
   │
   = note: Expected: Number<_>
                Got: A
